src/rmt_coptergym/c_sim/RMT_FDM_Header/RMT_FDM_DLL_FrameWork_FCS_RT_types.h

typedef struct {
  real_T w_x_K_IB_B_radDs;
  real_T w_y_K_IB_B_radDs;
  real_T w_z_K_IB_B_radDs;
} rot_K_IB_B_radDs_Bus;
typedef struct {
  real_T Phi_rad;
  real_T Theta_rad;
  real_T Psi_rad;
} att_euler_rad_Bus;
typedef struct {
  real_T u_K_R_E_B_mDs;
  real_T v_K_R_E_B_mDs;
  real_T w_K_R_E_B_mDs;
} vel_K_R_E_B_mDs_Bus;
typedef struct {
  real_T x_R_O_m;
  real_T y_R_O_m;
  real_T z_R_O_m;
} pos_R_O_m_Bus;
typedef struct {
  real_T w_x_W_OW_B_radDs;
  real_T w_y_W_OW_B_radDs;
  real_T w_z_W_OW_B_radDs;
} rot_W_OW_B_radDs_Bus;
typedef struct {
  real_T u_W_R_E_O_mDs;
  real_T v_W_R_E_O_mDs;
  real_T w_W_R_E_O_mDs;
} vel_W_R_E_O_mDs_Bus;
typedef struct {
  real_T Static_Temperature_ATM_K;
  real_T Speed_of_Sound_mDs;
  real_T Static_Pressure_ATM_NDm2;
  real_T rho_kgDm3;
} Atmosphere_Bus;
typedef struct {
  real_T Static_Pressure_meas_NDm2;
  real_T Static_Temperature_meas_K;
  real_T h_Alt_Baro_meas_m;
} fc_baro_meas_Bus;
typedef struct {
  real_T w_x_K_IB_B_IMU_meas_radDs;
  real_T w_y_K_IB_B_IMU_meas_radDs;
  real_T w_z_K_IB_B_IMU_meas_radDs;
} fc_gyro_meas_Bus;
typedef struct {
  real_T f_x_P_B_IMU_meas_mDs2;
  real_T f_y_P_B_IMU_meas_mDs2;
  real_T f_z_P_B_IMU_meas_mDs2;
} fc_acc_meas_Bus;
typedef struct {
  fc_gyro_meas_Bus gyro_meas;
  fc_acc_meas_Bus acc_meas;
} fc_imu_meas_Bus;
typedef struct {
  real_T lambda_R_WGS84_meas_rad;
  real_T mue_R_WGS84_meas_rad;
  real_T h_R_WGS84_meas_m;
} fc_pos_R_WGS84_meas_Bus;
typedef struct {
  real_T x_R_O_meas_m;
  real_T y_R_O_meas_m;
  real_T z_R_O_meas_m;
} fc_pos_R_local_meas_Bus;
typedef struct {
  real_T u_K_R_E_O_meas_mDs;
  real_T v_K_R_E_O_meas_mDs;
  real_T w_K_R_E_O_meas_mDs;
} fc_vel_K_R_E_O_meas_Bus;
typedef struct {
  real_T gamma_K_R_meas_rad;
  real_T chi_K_R_meas_rad;
} fc_path_K_R_meas_Bus;
typedef struct {
  real_T vel_K_R_abs_meas_mDs;
  fc_path_K_R_meas_Bus path_K_R_meas_rad;
} fc_translation_K_R_meas_Bus;
typedef struct {
  fc_pos_R_WGS84_meas_Bus pos_R_WGS84_meas;
  fc_pos_R_local_meas_Bus pos_R_local_meas;
  fc_vel_K_R_E_O_meas_Bus vel_K_R_E_O_meas;
  fc_translation_K_R_meas_Bus Translation_K_R_meas;
} fc_gps_meas_Bus;
typedef struct {
  real_T Phi_meas_rad;
  real_T Theta_meas_rad;
  real_T Psi_meas_rad;
  real_T M_BO_meas[9];
  real_T M_OB_meas[9];
} fc_ahrs_meas_Bus;
typedef struct {
  fc_baro_meas_Bus baro_meas;
  fc_imu_meas_Bus imu_meas;
  fc_gps_meas_Bus gps_meas;
  fc_ahrs_meas_Bus ahrs_meas;
} fc_measurements_Bus;
typedef struct {
  real_T w1_cmd_radDs;
  real_T w2_cmd_radDs;
  real_T w3_cmd_radDs;
  real_T w4_cmd_radDs;
  real_T w5_cmd_radDs;
  real_T w6_cmd_radDs;
  real_T w7_cmd_radDs;
  real_T w8_cmd_radDs;
} fc_ctrl_cmd_Bus;
typedef struct {
  real_T Phi_Dot_radDs;
  real_T Phi_ref_rad;
} RM_Phi_Bus;
typedef struct {
  real_T Theta_Dot_radDs;
  real_T Theta_ref_rad;
} RM_Theta_Bus;
typedef struct {
  RM_Phi_Bus RM_Phi;
  RM_Theta_Bus RM_Theta;
  real_T PsiDot_cmd_radDs;
} RM_attitude_Bus;
typedef struct {
  real_T nu_p_radDs2;
  real_T p_ref_radDs;
} RM_p_Bus;
typedef struct {
  real_T nu_q_radDs2;
  real_T q_ref_radDs;
} RM_q_Bus;
typedef struct {
  real_T nu_r_radDs2;
  real_T r_ref_radDs;
} RM_r_Bus;
typedef struct {
  RM_p_Bus RM_p;
  RM_q_Bus RM_q;
  RM_r_Bus RM_r;
} RM_rate_Bus;
typedef struct {
  real_T nu_u_mDs2;
  real_T u_C_ref_mDs;
} RM_u_C_Bus;
typedef struct {
  real_T nu_v_mDs2;
  real_T v_C_ref_mDs;
} RM_v_C_Bus;
typedef struct {
  real_T nu_w_mDs2;
  real_T w_C_ref_mDs;
} RM_w_C_Bus;
typedef struct {
  RM_u_C_Bus RM_u_C;
  RM_v_C_Bus RM_v_C;
  RM_w_C_Bus RM_w_C;
} RM_vel_Bus;
typedef struct {
  RM_attitude_Bus RM_attitude;
  RM_rate_Bus RM_rate;
  RM_vel_Bus RM_vel;
} fc_RM_Bus;
typedef struct {
  real_T u_K_R_E_C_est_mDs;
  real_T v_K_R_E_C_est_mDs;
  real_T w_K_R_E_C_est_mDs;
} vel_est_Bus;
typedef struct {
  real_T u_dot_K_R_EC_C_est_mDs2;
  real_T v_dot_K_R_EC_C_est_mDs2;
  real_T w_dot_K_R_EC_C_est_mDs2;
} vel_dot_est_Bus;
typedef struct {
  real_T p_est_radDs;
  real_T q_est_radDs;
  real_T r_est_radDs;
} rate_est_Bus;
typedef struct {
  real_T p_Dot_est_radDs2;
  real_T q_Dot_est_radDs2;
  real_T r_Dot_est_radDs2;
} rate_dot_est_Bus;
typedef struct {
  rot_K_IB_B_radDs_Bus rot_K_IB_B_radDs;
  att_euler_rad_Bus att_euler_rad;
  vel_K_R_E_B_mDs_Bus vel_K_R_E_B_mDs;
  pos_R_O_m_Bus pos_R_O_m;
} States_Bus;
typedef struct {
  real_T u_dot_K_R_EB_B_mDs2;
  real_T v_dot_K_R_EB_B_mDs2;
  real_T w_dot_K_R_EB_B_mDs2;
} vel_dot_K_R_EB_B_mDs2_Bus;
typedef struct {
  real_T w_x_dot_K_IB_B_B_radDs2;
  real_T w_y_dot_K_IB_B_B_radDs2;
  real_T w_z_dot_K_IB_B_B_radDs2;
} rot_dot_K_IB_B_B_radDs2_Bus;
typedef struct {
  real_T Phi_dot_radDs;
  real_T Theta_dot_radDs;
  real_T Psi_dot_radDs;
} att_dot_euler_radDs_Bus;
typedef struct {
  real_T x_dot_R_E_O_mDs;
  real_T y_dot_R_E_O_mDs;
  real_T z_dot_R_E_O_mDs;
} pos_dot_R_E_O_mDs_Bus;
typedef struct {
  vel_dot_K_R_EB_B_mDs2_Bus vel_dot_K_R_EB_B_mDs2;
  rot_dot_K_IB_B_B_radDs2_Bus rot_dot_K_IB_B_B_radDs2;
  att_dot_euler_radDs_Bus att_dot_euler_radDs;
  pos_dot_R_E_O_mDs_Bus pos_dot_R_E_O_mDs;
} States_Dot_Bus;
typedef struct {
  for_T_R_B_N_Bus for_T_R_B_N;
  mom_T_R_B_Nm_Bus mom_T_R_B_Nm;
} for_mom_T_R_B_Bus;
typedef struct {
  for_mom_P_R_B_Bus for_mom_P_R_B;
  real_T Propulsion_Out;
} Propulsion_Data_Out_Bus;
typedef struct {
  for_A_R_B_N_Bus for_A_R_B_N;
  mom_A_R_B_Nm_Bus mom_A_R_B_Nm;
} for_mom_A_R_B_Bus;
typedef struct {
  for_LDG_R_B_N_Bus for_LDG_R_B_N;
  mom_LDG_R_B_Nm_Bus mom_LDG_R_B_Nm;
} for_mom_LDG_R_B_Bus;
typedef struct {
  for_G_R_B_N_Bus for_G_R_B_N;
  mom_G_R_B_Nm_Bus mom_G_R_B_Nm;
} for_mom_G_R_B_Bus;
typedef struct {
  real_T pos_RG_B_m[3];
  real_T m_kg;
  real_T I_R_BB_kgm2[9];
} Weight_Balance_Bus;
typedef struct {
  for_mom_T_R_B_Bus for_mom_T_R_B;
  Propulsion_Data_Out_Bus Propulsion_Data_Out;
  for_mom_A_R_B_Bus for_mom_A_R_B;
  for_mom_LDG_R_B_Bus for_mom_LDG_R_B;
  for_mom_G_R_B_Bus for_mom_G_R_B;
  Weight_Balance_Bus Weight_Balance;
} Airframe_Outputs_Bus;
typedef struct {
  real_T acc_G_R_OO_O_mDs2[3];
} Gravitation_Bus;
typedef struct {
  Atmosphere_Bus Atmosphere;
  Gravitation_Bus Gravitation;
} Environment_Bus;
typedef struct {
  real_T w_x_K_EB_B_radDs;
  real_T w_y_K_EB_B_radDs;
  real_T w_z_K_EB_B_radDs;
} rot_K_EB_B_radDs_Bus;
typedef struct {
  real_T w_x_K_OB_B_radDs;
  real_T w_y_K_OB_B_radDs;
  real_T w_z_K_OB_B_radDs;
} rot_K_OB_B_radDs_Bus;
typedef struct {
  real_T M_BO[9];
  real_T M_OB[9];
  real_T M_NO[9];
  real_T M_ON[9];
} Kin_Trafo_Matrices_Bus;
typedef struct {
  rot_K_IB_B_radDs_Bus rot_K_IB_B_radDs;
  vel_K_R_E_B_mDs_Bus vel_K_R_E_B_mDs;
  rot_K_EB_B_radDs_Bus rot_K_EB_B_radDs;
  rot_K_OB_B_radDs_Bus rot_K_OB_B_radDs;
  Kin_Trafo_Matrices_Bus Kin_Trafo_Matrices;
} Kinematic_Data_Bus;
typedef struct {
  real_T u_A_R_E_0_mDs;
  real_T v_A_R_E_0_mDs;
  real_T w_A_R_E_0_mDs;
} vel_A_R_E_O_mDs_Bus;
typedef struct {
  real_T u_A_R_E_B_mDs;
  real_T v_A_R_E_B_mDs;
  real_T w_A_R_E_B_mDs;
} vel_A_R_E_B_mDs_Bus;
typedef struct {
  vel_A_R_E_O_mDs_Bus vel_A_R_E_0_mDs;
  vel_A_R_E_B_mDs_Bus vel_A_R_E_B_mDs;
} Aero_Velocities_Bus;
typedef struct {
  real_T VEL_A_R_abs_mDs;
  real_T alpha_A_R_rad;
  real_T beta_A_R_rad;
} Translation_A_R_Bus;
typedef struct {
  real_T M_BS[9];
  real_T M_SB[9];
  real_T M_BA[9];
  real_T M_AB[9];
  real_T M_AO[9];
  real_T M_OA[9];
} Aero_Trafo_Matrices_Bus;
typedef struct {
  real_T w_x_A_AB_B_radDs;
  real_T w_y_A_AB_B_radDs;
  real_T w_z_A_AB_B_radDs;
} rot_A_AB_B_radDs_Bus;
typedef struct {
  real_T w_x_A_AB_A_radDs;
  real_T w_y_A_AB_A_radDs;
  real_T w_z_A_AB_A_radDs;
} rot_A_AB_A_radDs_Bus;
typedef struct {
  real_T w_x_A_AB_S_radDs;
  real_T w_y_A_AB_S_radDs;
  real_T w_z_A_AB_S_radDs;
} rot_A_AB_S_radDs_Bus;
typedef struct {
  rot_A_AB_B_radDs_Bus rot_A_AB_B_radDs;
  rot_A_AB_A_radDs_Bus rot_A_AB_A_radDs;
  rot_A_AB_S_radDs_Bus rot_A_AB_S_radDs;
} Aero_Angular_Rates_Bus;
typedef struct {
  Aero_Velocities_Bus Aero_Velocities;
  Translation_A_R_Bus Translation_A_R;
  Aero_Trafo_Matrices_Bus Aero_Trafo_Matrices;
  Aero_Angular_Rates_Bus Aero_Angular_Rates;
} Airdata_Bus;
typedef struct {
  real_T u_W_R_E_B_mDs;
  real_T v_W_R_E_B_mDs;
  real_T w_W_R_E_B_mDs;
} vel_W_R_E_B_mDs_Bus;
typedef struct {
  vel_W_R_E_B_mDs_Bus vel_W_R_E_B_mDs;
  vel_W_R_E_O_mDs_Bus vel_W_R_E_O_mDs;
} Wind_Velocities_Bus;
typedef struct {
  real_T w_x_W_0W_0_radDs;
  real_T w_y_W_0W_0_radDs;
  real_T w_z_W_0W_0_radDs;
} rot_W_0W_0_radDs_Bus;
typedef struct {
  rot_W_0W_0_radDs_Bus rot_W_0W_0_radDs;
  rot_W_OW_B_radDs_Bus rot_W_OW_B_radDs;
} Wind_Angular_Rates_Bus;
typedef struct {
  Wind_Velocities_Bus Wind_Velocities;
  Wind_Angular_Rates_Bus Wind_Angular_Rates;
} Wind_Data_Bus;
typedef struct {
  Kinematic_Data_Bus Kinematic_Data;
  Airdata_Bus Airdata;
  Wind_Data_Bus Wind_Data;
} Motion_Kinematics_Bus;
typedef struct {
  States_Dot_Bus States_Dot;
  Airframe_Outputs_Bus Airframe_Outputs;
  Environment_Bus Environment;
  Motion_Kinematics_Bus Motion_Kinematics;
} Outputs_Bus;
typedef struct {
  real_T w1_act_radDs;
  real_T w2_act_radDs;
  real_T w3_act_radDs;
  real_T w4_act_radDs;
  real_T w5_act_radDs;
  real_T w6_act_radDs;
  real_T w7_act_radDs;
  real_T w8_act_radDs;
} Commands_Bus;
typedef struct {
  States_Bus States;
  Outputs_Bus Outputs;
  Commands_Bus Commands;
} Vehicle_Bus;
typedef struct {
  real_T Static_Pressure_meas_NDm2;
  real_T Static_Temperature_meas_K;
  real_T h_Baro_meas_m;
} baro_meas_Bus;
typedef struct {
  real_T w_x_K_IB_B_IMU_meas_radDs;
  real_T w_y_K_IB_B_IMU_meas_radDs;
  real_T w_z_K_IB_B_IMU_meas_radDs;
} gyro_meas_Bus;
typedef struct {
  real_T f_x_P_B_IMU_meas_mDs2;
  real_T f_y_P_B_IMU_meas_mDs2;
  real_T f_z_P_B_IMU_meas_mDs2;
} acc_meas_Bus;
typedef struct {
  gyro_meas_Bus gyro_meas;
  acc_meas_Bus acc_meas;
} imu_meas_Bus;
typedef struct {
  real_T lambda_R_WGS84_meas_rad;
  real_T mue_R_WGS84_meas_rad;
  real_T h_R_WGS84_meas_m;
} pos_R_WGS84_meas_Bus;
typedef struct {
  real_T u_K_R_E_O_meas_mDs;
  real_T v_K_R_E_O_meas_mDs;
  real_T w_K_R_E_O_meas_mDs;
} vel_K_R_E_O_meas_Bus;
typedef struct {
  real_T gamma_K_R_meas_rad;
  real_T chi_K_R_meas_rad;
} path_K_R_meas_rad_Bus;
typedef struct {
  real_T vel_K_R_abs_meas_mDs;
  path_K_R_meas_rad_Bus path_K_R_meas_rad;
} Translation_K_R_meas_Bus;
typedef struct {
  pos_R_WGS84_meas_Bus pos_R_WGS84_meas;
  pos_R_local_meas_Bus pos_R_local_meas;
  vel_K_R_E_O_meas_Bus vel_K_R_E_O_meas;
  Translation_K_R_meas_Bus Translation_K_R_meas;
} gps_meas_Bus;
typedef struct {
  real_T Phi_meas_rad;
  real_T Theta_meas_rad;
  real_T Psi_meas_rad;
  real_T M_BO_meas[9];
  real_T M_OB_meas[9];
} ahrs_meas_Bus;
typedef struct {
  real_T w1_meas_radDs;
  real_T w2_meas_radDs;
  real_T w3_meas_radDs;
  real_T w4_meas_radDs;
  real_T w5_meas_radDs;
  real_T w6_meas_radDs;
  real_T w7_meas_radDs;
  real_T w8_meas_radDs;
} motor_meas_Bus;
typedef struct {
  real_T wow_switch_1_meas;
} switches_meas_Bus;
typedef struct {
  baro_meas_Bus baro_meas;
  imu_meas_Bus imu_meas;
  gps_meas_Bus gps_meas;
  ahrs_meas_Bus ahrs_meas;
  motor_meas_Bus motor_meas;
  switches_meas_Bus switches_meas;
} Measurements_Bus;