src/rmt_coptergym/c_sim/RMT_structs.py


class Aero_Trafo_Matrices_Bus(ctypes.Structure):
    _fields_ = [
        ("M_BS", real_T * 9),
        ("M_SB", real_T * 9),
        ("M_BA", real_T * 9),
        ("M_AB", real_T * 9),
        ("M_AO", real_T * 9),
        ("M_OA", real_T * 9)
    ]

class rot_A_AB_B_radDs_Bus(ctypes.Structure):
    _fields_ = [
        ("w_x_A_AB_B_radDs", real_T),
        ("w_y_A_AB_B_radDs", real_T),
        ("w_z_A_AB_B_radDs", real_T)
    ]

class rot_A_AB_A_radDs_Bus(ctypes.Structure):
    _fields_ = [
        ("w_x_A_AB_A_radDs", real_T),
        ("w_y_A_AB_A_radDs", real_T),
        ("w_z_A_AB_A_radDs", real_T)
    ]

class rot_A_AB_S_radDs_Bus(ctypes.Structure):
    _fields_ = [
        ("w_x_A_AB_S_radDs", real_T),
        ("w_y_A_AB_S_radDs", real_T),
        ("w_z_A_AB_S_radDs", real_T)
    ]

class Aero_Angular_Rates_Bus(ctypes.Structure):
    _fields_ = [
        ("rot_A_AB_B_radDs", rot_A_AB_B_radDs_Bus),
        ("rot_A_AB_A_radDs", rot_A_AB_A_radDs_Bus),
        ("rot_A_AB_S_radDs", rot_A_AB_S_radDs_Bus)
    ]

class Airdata_Bus(ctypes.Structure):
    _fields_ = [
        ("Aero_Velocities", Aero_Velocities_Bus),
        ("Translation_A_R", Translation_A_R_Bus),
        ("Aero_Trafo_Matrices", Aero_Trafo_Matrices_Bus),
        ("Aero_Angular_Rates", Aero_Angular_Rates_Bus)
    ]

class vel_W_R_E_B_mDs_Bus(ctypes.Structure):
    _fields_ = [
        ("u_W_R_E_B_mDs", real_T),
        ("v_W_R_E_B_mDs", real_T),
        ("w_W_R_E_B_mDs", real_T)
    ]

class Wind_Velocities_Bus(ctypes.Structure):
    _fields_ = [
        ("vel_W_R_E_B_mDs", vel_W_R_E_B_mDs_Bus),
        ("vel_W_R_E_O_mDs", vel_W_R_E_O_mDs_Bus)
    ]

class rot_W_0W_0_radDs_Bus(ctypes.Structure):
    _fields_ = [
        ("w_x_W_0W_0_radDs", real_T),
        ("w_y_W_0W_0_radDs", real_T),
        ("w_z_W_0W_0_radDs", real_T)
    ]

class Wind_Angular_Rates_Bus(ctypes.Structure):
    _fields_ = [
        ("rot_W_0W_0_radDs", rot_W_0W_0_radDs_Bus),
        ("rot_W_OW_B_radDs", rot_W_OW_B_radDs_Bus)
    ]

class Wind_Data_Bus(ctypes.Structure):
    _fields_ = [
        ("Wind_Velocities", Wind_Velocities_Bus),
        ("Wind_Angular_Rates", Wind_Angular_Rates_Bus)
    ]

class Motion_Kinematics_Bus(ctypes.Structure):
    _fields_ = [
        ("Kinematic_Data", Kinematic_Data_Bus),
        ("Airdata", Airdata_Bus),
        ("Wind_Data", Wind_Data_Bus)
    ]

# Hauptausgabebusse

class Outputs_Bus(ctypes.Structure):
    _fields_ = [
        ("States_Dot", States_Dot_Bus),
        ("Airframe_Outputs", Airframe_Outputs_Bus),
        ("Environment", Environment_Bus),
        ("Motion_Kinematics", Motion_Kinematics_Bus)
    ]

class States_Bus(ctypes.Structure):
    _fields_ = [
        ("rot_K_IB_B_radDs", rot_K_IB_B_radDs_Bus),
        ("att_euler_rad", att_euler_rad_Bus),
        ("vel_K_R_E_B_mDs", vel_K_R_E_B_mDs_Bus),
        ("pos_R_O_m", pos_R_O_m_Bus)
    ]

class Commands_Bus(ctypes.Structure):
    _fields_ = [
        ("w1_act_radDs", real_T),
        ("w2_act_radDs", real_T),
        ("w3_act_radDs", real_T),
        ("w4_act_radDs", real_T),
        ("w5_act_radDs", real_T),
        ("w6_act_radDs", real_T),
        ("w7_act_radDs", real_T),
        ("w8_act_radDs", real_T)
    ]

class Vehicle_Bus(ctypes.Structure):
    _fields_ = [
        ("States", States_Bus),
        ("Outputs", Outputs_Bus),
        ("Commands", Commands_Bus)
    ]

# Messungsbusse

class baro_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("Static_Pressure_meas_NDm2", real_T),
        ("Static_Temperature_meas_K", real_T),
        ("h_Baro_meas_m", real_T)
    ]

class gyro_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("w_x_K_IB_B_IMU_meas_radDs", real_T),
        ("w_y_K_IB_B_IMU_meas_radDs", real_T),
        ("w_z_K_IB_B_IMU_meas_radDs", real_T)
    ]

class acc_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("f_x_P_B_IMU_meas_mDs2", real_T),
        ("f_y_P_B_IMU_meas_mDs2", real_T),
        ("f_z_P_B_IMU_meas_mDs2", real_T)
    ]

class imu_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("gyro_meas", gyro_meas_Bus),
        ("acc_meas", acc_meas_Bus)
    ]

class pos_R_WGS84_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("lambda_R_WGS84_meas_rad", real_T),
        ("mue_R_WGS84_meas_rad", real_T),
        ("h_R_WGS84_meas_m", real_T)
    ]

class vel_K_R_E_O_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("u_K_R_E_O_meas_mDs", real_T),
        ("v_K_R_E_O_meas_mDs", real_T),
        ("w_K_R_E_O_meas_mDs", real_T)
    ]

class path_K_R_meas_rad_Bus(ctypes.Structure):
    _fields_ = [
        ("gamma_K_R_meas_rad", real_T),
        ("chi_K_R_meas_rad", real_T)
    ]

class Translation_K_R_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("vel_K_R_abs_meas_mDs", real_T),
        ("path_K_R_meas_rad", path_K_R_meas_rad_Bus)
    ]

class gps_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("pos_R_WGS84_meas", pos_R_WGS84_meas_Bus),
        ("pos_R_local_meas", pos_R_local_meas_Bus),
        ("vel_K_R_E_O_meas", vel_K_R_E_O_meas_Bus),
        ("Translation_K_R_meas", Translation_K_R_meas_Bus)
    ]

class ahrs_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("Phi_meas_rad", real_T),
        ("Theta_meas_rad", real_T),
        ("Psi_meas_rad", real_T),
        ("M_BO_meas", real_T * 9),
        ("M_OB_meas", real_T * 9)
    ]

class motor_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("w1_meas_radDs", real_T),
        ("w2_meas_radDs", real_T),
        ("w3_meas_radDs", real_T),
        ("w4_meas_radDs", real_T),
        ("w5_meas_radDs", real_T),
        ("w6_meas_radDs", real_T),
        ("w7_meas_radDs", real_T),
        ("w8_meas_radDs", real_T)

    ]


class switches_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("wow_switch_1_meas", real_T)
    ]

class Measurements_Bus(ctypes.Structure):
    _fields_ = [
        ("baro_meas", baro_meas_Bus),
        ("imu_meas", imu_meas_Bus),
        ("gps_meas", gps_meas_Bus),
        ("ahrs_meas", ahrs_meas_Bus),
        ("motor_meas", motor_meas_Bus),
        ("switches_meas", switches_meas_Bus)
    ]


############################################################
# Strukturen aus RMT_FDM_DLL_FrameWork_FCS_RT_types.h
# (Nur neue, nicht duplizierte Strukturen)
############################################################

# Flight-Controller-spezifische Messungsbusse ("fc_"-Präfix)

class fc_baro_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("Static_Pressure_meas_NDm2", real_T),
        ("Static_Temperature_meas_K", real_T),
        ("h_Alt_Baro_meas_m", real_T)
    ]

class fc_gyro_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("w_x_K_IB_B_IMU_meas_radDs", real_T),
        ("w_y_K_IB_B_IMU_meas_radDs", real_T),
        ("w_z_K_IB_B_IMU_meas_radDs", real_T)
    ]

class fc_acc_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("f_x_P_B_IMU_meas_mDs2", real_T),
        ("f_y_P_B_IMU_meas_mDs2", real_T),
        ("f_z_P_B_IMU_meas_mDs2", real_T)
    ]

class fc_imu_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("gyro_meas", fc_gyro_meas_Bus),
        ("acc_meas", fc_acc_meas_Bus)
    ]

class fc_pos_R_WGS84_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("lambda_R_WGS84_meas_rad", real_T),
        ("mue_R_WGS84_meas_rad", real_T),
        ("h_R_WGS84_meas_m", real_T)
    ]

class fc_pos_R_local_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("x_R_O_meas_m", real_T),
        ("y_R_O_meas_m", real_T),
        ("z_R_O_meas_m", real_T)
    ]

class fc_vel_K_R_E_O_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("u_K_R_E_O_meas_mDs", real_T),
        ("v_K_R_E_O_meas_mDs", real_T),
        ("w_K_R_E_O_meas_mDs", real_T)
    ]

class fc_path_K_R_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("gamma_K_R_meas_rad", real_T),
        ("chi_K_R_meas_rad", real_T)
    ]

class fc_translation_K_R_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("vel_K_R_abs_meas_mDs", real_T),
        ("path_K_R_meas_rad", fc_path_K_R_meas_Bus)
    ]

class fc_gps_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("pos_R_WGS84_meas", fc_pos_R_WGS84_meas_Bus),
        ("pos_R_local_meas", fc_pos_R_local_meas_Bus),
        ("vel_K_R_E_O_meas", fc_vel_K_R_E_O_meas_Bus),
        ("Translation_K_R_meas", fc_translation_K_R_meas_Bus)
    ]

class fc_ahrs_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("Phi_meas_rad", real_T),
        ("Theta_meas_rad", real_T),
        ("Psi_meas_rad", real_T),
        ("M_BO_meas", real_T * 9),
        ("M_OB_meas", real_T * 9)
    ]

class fc_measurements_Bus(ctypes.Structure):
    _fields_ = [
        ("baro_meas", fc_baro_meas_Bus),
        ("imu_meas", fc_imu_meas_Bus),
        ("gps_meas", fc_gps_meas_Bus),
        ("ahrs_meas", fc_ahrs_meas_Bus)
    ]
    
# Flight-Controller-Steuerungsbusse

class fc_ctrl_cmd_Bus(ctypes.Structure):
    _fields_ = [
        ("w1_cmd_radDs", real_T),
        ("w2_cmd_radDs", real_T),
        ("w3_cmd_radDs", real_T),
        ("w4_cmd_radDs", real_T),
        ("w5_cmd_radDs", real_T),
        ("w6_cmd_radDs", real_T),
        ("w7_cmd_radDs", real_T),
        ("w8_cmd_radDs", real_T)
    ]
    
# Referenzmodell- (RM) und Schätzungs- (est) Busse

class RM_Phi_Bus(ctypes.Structure):
    _fields_ = [
        ("Phi_Dot_radDs", real_T),
        ("Phi_ref_rad", real_T)
    ]

class RM_Theta_Bus(ctypes.Structure):
    _fields_ = [
        ("Theta_Dot_radDs", real_T),
        ("Theta_ref_rad", real_T)
    ]

class RM_attitude_Bus(ctypes.Structure):
    _fields_ = [
        ("RM_Phi", RM_Phi_Bus),
        ("RM_Theta", RM_Theta_Bus),
        ("PsiDot_cmd_radDs", real_T)
    ]

class RM_p_Bus(ctypes.Structure):
    _fields_ = [
        ("nu_p_radDs2", real_T),
        ("p_ref_radDs", real_T)
    ]

class RM_q_Bus(ctypes.Structure):
    _fields_ = [
        ("nu_q_radDs2", real_T),
        ("q_ref_radDs", real_T)
    ]

class RM_r_Bus(ctypes.Structure):
    _fields_ = [
        ("nu_r_radDs2", real_T),
        ("r_ref_radDs", real_T)
    ]

class RM_rate_Bus(ctypes.Structure):
    _fields_ = [
        ("RM_p", RM_p_Bus),
        ("RM_q", RM_q_Bus),
        ("RM_r", RM_r_Bus)
    ]

class RM_u_C_Bus(ctypes.Structure):
    _fields_ = [
        ("nu_u_mDs2", real_T),
        ("u_C_ref_mDs", real_T)
    ]

class RM_v_C_Bus(ctypes.Structure):
    _fields_ = [
        ("nu_v_mDs2", real_T),
        ("v_C_ref_mDs", real_T)
    ]

class RM_w_C_Bus(ctypes.Structure):
    _fields_ = [
        ("nu_w_mDs2", real_T),
        ("w_C_ref_mDs", real_T)
    ]

class RM_vel_Bus(ctypes.Structure):
    _fields_ = [
        ("RM_u_C", RM_u_C_Bus),
        ("RM_v_C", RM_v_C_Bus),
        ("RM_w_C", RM_w_C_Bus)
    ]

class fc_RM_Bus(ctypes.Structure):
    _fields_ = [
        ("RM_attitude", RM_attitude_Bus),
        ("RM_rate", RM_rate_Bus),
        ("RM_vel", RM_vel_Bus)
    ]

class vel_est_Bus(ctypes.Structure):
    _fields_ = [
        ("u_K_R_E_C_est_mDs", real_T),
        ("v_K_R_E_C_est_mDs", real_T),
        ("w_K_R_E_C_est_mDs", real_T)
    ]

class vel_dot_est_Bus(ctypes.Structure):
    _fields_ = [
        ("u_dot_K_R_EC_C_est_mDs2", real_T),
        ("v_dot_K_R_EC_C_est_mDs2", real_T),
        ("w_dot_K_R_EC_C_est_mDs2", real_T)
    ]

class rate_est_Bus(ctypes.Structure):
    _fields_ = [
        ("p_est_radDs", real_T),
        ("q_est_radDs", real_T),
        ("r_est_radDs", real_T)
    ]

class rate_dot_est_Bus(ctypes.Structure):
    _fields_ = [
        ("p_Dot_est_radDs2", real_T),
        ("q_Dot_est_radDs2", real_T),
        ("r_Dot_est_radDs2", real_T)
    ]
